--- a/.travis.yml
+++ b/.travis.yml
@@ -41,9 +41,11 @@ before_install:
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
 
 install:
+  - moodle-plugin-ci add-plugin moodlehq/moodle-local_moodlecheck
   - moodle-plugin-ci install
 
 script:
+  - php moodle/local/moodlecheck/cli/moodlecheck.php --path=mod/gcanvas --format=text
   - moodle-plugin-ci phplint
   - moodle-plugin-ci phpcpd
   - moodle-plugin-ci phpmd
