--- a/.travis.yml
+++ b/.travis.yml
@@ -1,57 +1,64 @@
 language: php
-
-# Workaround for fixing that Selenium server is not running and therefore javascript Behat tests are not working:
-# https://github.com/moodlerooms/moodle-plugin-ci/issues/70
 sudo: required
+dist: trusty
 
 addons:
-  firefox: "47.0.1"
-  postgresql: "9.4"
+  hosts:
+    - commander.test
+  firefox: "35.0.1"
+  postgresql: "9.3"
   apt:
     packages:
-      - openjdk-8-jre-headless
+      - oracle-java9-installer
+      - oracle-java9-set-default
+      - redis-server
+
+services:
+  - redis-server
 
 cache:
   directories:
     - $HOME/.composer/cache
     - $HOME/.npm
 
-php:
-  # PHP 5.6 gives errors because of the provider.php needs to be PHP7
-  - 7.1
-
 env:
   global:
-    - MOODLE_BRANCH=MOODLE_34_STABLE
-    - MOODLE_BRANCH=MOODLE_35_STABLE
-    - MOODLE_BRANCH=MOODLE_36_STABLE
     - IGNORE_PATHS=vendor,source
     - IGNORE_NAMES=*.txt,*.md
-  matrix:
-    - DB=pgsql
-    - DB=mysqli
+
+# Alternate tests with MySQL and PostgreSQL
+matrix:
+  include:
+    # PHP 7.0
+    - php: 7.0
+      env: DB=pgsql  MOODLE_BRANCH=MOODLE_33_STABLE
+    - php: 7.0
+      env: DB=mysqli MOODLE_BRANCH=MOODLE_35_STABLE
+    - php: 7.2
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE
+    - php: 7.2
+      env: DB=pgsql MOODLE_BRANCH=MASTER
 
 before_install:
   - phpenv config-rm xdebug.ini
-  - nvm install 8.9
-  - nvm use 8.9
   - cd ../..
-  - composer create-project -n --no-dev --prefer-dist moodlerooms/moodle-plugin-ci ci ^2
+  - nvm install 8.9;
+    nvm use 8.9;
+    composer create-project -n --no-dev --prefer-dist moodlerooms/moodle-plugin-ci ci ^2;
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
 
 install:
-  - moodle-plugin-ci add-plugin moodlehq/moodle-local_moodlecheck
-  - moodle-plugin-ci install
+  - moodle-plugin-ci install -vvv
+  - echo '$CFG->cookiesecure = false;' >> moodle/config.php
 
 script:
-  - php moodle/local/moodlecheck/cli/moodlecheck.php --path=mod/gcanvas --format=text
+  - moodle-plugin-ci validate
   - moodle-plugin-ci phplint
   - moodle-plugin-ci phpcpd
   - moodle-plugin-ci phpmd
   - moodle-plugin-ci codechecker
-  - moodle-plugin-ci validate
   - moodle-plugin-ci savepoints
-  - moodle-plugin-ci mustache || true    # report issues, but don't fail the build. Current issue contacting the validator.
-  - moodle-plugin-ci grunt
+  - moodle-plugin-ci mustache
+  - moodle-plugin-ci grunt || false
   - moodle-plugin-ci phpunit
   - moodle-plugin-ci behat
