Add Gruntfile to allow local build of an amd module

--- a/.travis.yml
+++ b/.travis.yml
@@ -57,6 +57,6 @@ script:
   - moodle-plugin-ci codechecker
   - moodle-plugin-ci savepoints
   - moodle-plugin-ci mustache
-  - moodle-plugin-ci grunt || false
+  - moodle-plugin-ci grunt
   - moodle-plugin-ci phpunit
   - moodle-plugin-ci behat
