--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "grunt-load-gruntfile": "0.0.2"
   },
   "dependencies": {
+    "grunt-cli": "^1.3.2",
     "grunt-contrib-clean": "^1.1.0",
     "lodash": "^4.17.19"
   }
