--- a/.travis.yml
+++ b/.travis.yml
@@ -1,62 +1,50 @@
 language: php
-sudo: required
-dist: trusty
 
 addons:
-  hosts:
-    - moodle.test
-  firefox: "35.0.1"
-  postgresql: "9.4"
-  apt:
-    packages:
-      - oracle-java9-installer
-      - oracle-java9-set-default
-      - redis-server
+  postgresql: "9.6"
 
 services:
-  - redis-server
+  - mysql
+  - postgresql
+  - docker
 
 cache:
   directories:
     - $HOME/.composer/cache
     - $HOME/.npm
 
+php:
+  - 7.2
+  - 7.4
+
 env:
   global:
-    - IGNORE_PATHS=vendor,source
-    - IGNORE_NAMES=*.txt,*.md
-
-# Alternate tests with MySQL and PostgreSQL
-matrix:
-  include:
-    # PHP 7.0
-    - php: 7.0
-      env: DB=mysqli MOODLE_BRANCH=MOODLE_35_STABLE
-    - php: 7.2
-      env: DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE
-    - php: 7.2
-      env: DB=pgsql MOODLE_BRANCH=master
+    - MOODLE_BRANCH=MOODLE_310_STABLE
+  matrix:
+    - DB=pgsql
+    - DB=mysqli
 
 before_install:
   - phpenv config-rm xdebug.ini
+  - nvm install 14 # moodle-plugin-ci still uses 8.9, but Moodle core switched to 14 in MDL-66109.
+  - nvm use 14
   - cd ../..
-  - nvm install 8.9;
-    nvm use 8.9;
-    composer create-project -n --no-dev --prefer-dist moodlerooms/moodle-plugin-ci ci ^2;
+  - composer create-project -n --no-dev --prefer-dist blackboard-open-source/moodle-plugin-ci ci dev-master
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
+  - docker run -d -p 127.0.0.1:4444:4444 --net=host -v /dev/shm:/dev/shm selenium/standalone-chrome:3
 
 install:
-  - moodle-plugin-ci install -vvv
-  - echo '$CFG->cookiesecure = false;' >> moodle/config.php
+  - moodle-plugin-ci install
 
 script:
-  - moodle-plugin-ci validate
   - moodle-plugin-ci phplint
-  - moodle-plugin-ci phpcpd
+  - moodle-plugin-ci phpcpd || true # Output warnings but do not fail the build because of duplicated but well working code
   - moodle-plugin-ci phpmd
   - moodle-plugin-ci codechecker
+  - moodle-plugin-ci validate
   - moodle-plugin-ci savepoints
   - moodle-plugin-ci mustache
   - moodle-plugin-ci grunt
+  - moodle-plugin-ci phpdoc
   - moodle-plugin-ci phpunit
-  - moodle-plugin-ci behat
+  - moodle-plugin-ci behat --profile chrome --dump
